Fix mobile alignment

--- a/style.css
+++ b/style.css
@@ -101,11 +101,11 @@ button:hover {
 
 footer {
     width: fit-content;
-    margin: 100px auto 50px;
+    margin: 80px auto 50px;
 }
 
 footer a img {
-    width: 120px;
+    width: 80px;
 }
 
 #qlink {
@@ -155,6 +155,7 @@ footer a img {
     text-align: justify;
     line-height: 1.8;
     width: 640px;
+    margin: 0 auto;
 }
 
 #motto {
@@ -169,9 +170,10 @@ footer a img {
     text-align: justify;
     line-height: 1.8;
     width: 640px;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 750px) {
     header {
         width: fit-content;
         margin: 35px auto;
